plugins {
    id 'application'
}

group = 'me.arthed'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    maven {
        name = 'codemc-repo'
        url = 'https://repo.codemc.org/repository/nms/'
    }
}

dependencies {
	compileOnly 'org.spigotmc:spigot:1.17.1-R0.1-SNAPSHOT'
    implementation project(':NMS')
}

task prepareKotlinBuildScriptModel {

}